force-app/main/default/objects/B25__Sync_Field_Mapping__mdt/B25__Sync_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains mapping for Salesforce sObject Fields to external API fields</description>
    <label>Sync Field Mapping</label>
    <pluralLabel>Sync Field Mappings</pluralLabel>
</CustomObject>