force-app/main/default/objects/B25__Sync_Field_Mapping__mdt/fields/B25__API_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__API_Field__c</fullName>
    <label>API Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>