force-app/main/default/objects/B25__Sync_Field_Mapping__mdt/fields/B25__SObject_Field__c.field-meta.xml
<CustomField>
    <fullName>B25__SObject_Field__c</fullName>
    <label>sObject Field</label>
    <metadataRelationshipControllingField>B25__Sync_Field_Mapping__mdt.B25__SObject_Type__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Sync_Field_Mappings</relationshipLabel>
    <relationshipName>Sync_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>