force-app/main/default/objects/B25__Sync_Field_Mapping__mdt/fields/B25__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__SObject_Type__c</fullName>
    <label>sObject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Sync_Field_Mappings</relationshipLabel>
    <relationshipName>Sync_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>