force-app/main/default/objects/B25__Sync_Field_Mapping__mdt/fields/B25__Type__c.field-meta.xml
<CustomField>
    <fullName>B25__Type__c</fullName>
    <description>The type of connection these mappings should apply to.</description>
    <inlineHelpText>Le type de connexion auquel ces mappages doivent s’appliquer.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outlook</fullName>
                <default>true</default>
                <label>Outlook</label>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>